--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-chips": "^0.8.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-notification-badge": "^1.5.1",
